nidaq/include/nidaq.h



typedef char i8;

typedef short i16;

typedef unsigned short u16;

typedef long i32;

typedef unsigned long u32;

typedef double f64;

extern i16 WINAPI SCXI_Configure_Connection (
	i16        chassisID,
	i16        moduleSlot,
	i16        channel,
	i16        connectionType);

extern i16 WINAPI SCXI_Configure_Filter (
	i16        chassisID,
	i16        moduleSlot,
	i16        channel,
	i16        filterMode,
	f64        freq,
	u16        cutoffDivDown,
	u16        outClkDivDown,
	f64        FAR * actFreq);

extern i16 WINAPI SCXI_Get_Chassis_Info (
	i16        chassisID,
	i16        FAR * chassisType,
	i16        FAR * address,
	i16        FAR * commMode,
	i16        FAR * commPath,
	i16        FAR * numSlots);

extern i16 WINAPI SCXI_Get_Module_Info (
	i16        chassisID,
	i16        slot,
	i32        FAR * modulePresent,
	i16        FAR * opMode,
	i16        FAR * DAQboard);

extern i16 WINAPI SCXI_Get_State (
	i16        chassisID,
	i16        moduleSlot,
	i16        port,
	i16        channel,
	u32        FAR * data);

extern i16 WINAPI SCXI_Get_Status (
	i16        chassisID,
	i16        moduleSlot,
	i16        wait,
	u32        FAR * data);

extern i16 WINAPI SCXI_Load_Config (
	i16        chassisID);

extern i16 WINAPI SCXI_MuxCtr_Setup (
	i16        slot,
	i16        enable,
	i16        scanDiv,
	u16        muxCtrVal);

extern i16 WINAPI SCXI_Reset (
	i16        chassisID,
	i16        moduleSlot);

extern i16 WINAPI SCXI_Scale (
	i16        chassisID,
	i16        moduleSlot,
	i16        SCXIchannel,
	f64        SCXIgain,
	f64        TBgain,
	i16        DAQdevice,
	i16        DAQchannel,
	i16        DAQgain,
	u32        numPoints,
	i16        FAR * binArray,
	f64        FAR * voltArray);

extern i16 WINAPI SCXI_SCAN_Setup (
	i16        chassisID,
	i16        numModules,
	i16        FAR * modules,
	i16        FAR * numChans,
	i16        FAR * startChans,
	i16        DAQboard,
	i16        modeFlag);

extern i16 WINAPI SCXI_Set_Config (
	i16        chassisID,
	i16        chassisType,
	i16        address,
	i16        commMode,
	i16        slotOrCOMM,
	i16        numSlots,
	i32        FAR * moduleTypes,
	i16        FAR * opModes,
	i16        FAR * DAQboards);

extern i16 WINAPI SCXI_Set_Gain (
	i16        chassisID,
	i16        moduleSlot,
	i16        channel,
	f64        gain);

extern i16 WINAPI SCXI_Set_Input_Mode (
	i16        chassisID,
	i16        moduleSlot,
	i16        inputMode);

extern i16 WINAPI SCXI_Set_State (
	i16        chassisID,
	i16        moduleSlot,
	i16        port,
	i16        channel,
	u32        data);

extern i16 WINAPI SCXI_Single_Chan_Setup (
	i16        chassisID,
	i16        moduleSlot,
	i16        chan,
	i16        DAQboard);

extern i16 WINAPI SCXI_Track_Hold_Control (
	i16        chassisID,
	i16        moduleSlot,
	i16        state,
	i16        DAQboard);

extern i16 WINAPI SCXI_Track_Hold_Setup (
	i16        chassisID,
	i16        moduleSlot,
	i16        mode,
	i16        source,
	i16        send,
	i16        holdCnt,
	i16        DAQboard);

extern i16 WINAPI Select_Signal (
	i16        deviceNumber,
	u32        signal,
	u32        source,
	u32        sourceSpec);

extern i16 WINAPI Set_DAQ_Device_Info (
	i16        deviceNumber,
	u32        infoType,
	u32        infoVal);

extern i16 WINAPI Timeout_Config (
	i16        slot,
	i32        numTicks);

extern i16 WINAPI WFM_Chan_Control (
	i16        slot,
	i16        channel,
	i16        operation);

extern i16 WINAPI WFM_Check (
	i16        slot,
	i16        channel,
	i16        FAR * progress,
	u32        FAR * itersDone,
	u32        FAR * pointsDone);

extern i16 WINAPI WFM_ClockRate (
	i16        slot,
	i16        group,
	i16        whickClock,
	i16        timebase,
	u32        updateInterval,
	i16        mode);

extern i16 WINAPI WFM_DB_Config (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        DBMode,
	i16        oldDataStop,
	i16        partialTransfer);

extern i16 WINAPI WFM_DB_HalfReady (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        FAR * halfReady);

extern i16 WINAPI WFM_DB_Transfer (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        FAR * buffer,
	u32        cnt);

extern i16 WINAPI WFM_from_Disk (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i8         FAR * fileName,
	u32        startPts,
	u32        endPts,
	u32        iterations,
	f64        rate);

extern i16 WINAPI WFM_Group_Control (
	i16        slot,
	i16        group,
	i16        operation);

extern i16 WINAPI WFM_Group_Setup (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        group);

extern i16 WINAPI WFM_Load (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        FAR * buffer,
	u32        cnt,
	u32        iterations,
	i16        mode);

extern i16 WINAPI WFM_Op (
	i16        slot,
	i16        numChans,
	i16        FAR * chanVect,
	i16        FAR * buffer,
	u32        cnt,
	u32        iterations,
	f64        rate);

extern i16 WINAPI WFM_Rate (
	f64        rate,
	i16        units,
	i16        FAR * timebase,
	u32        FAR * updateInterval);

extern i16 WINAPI WFM_Scale (
	i16        slot,
	i16        chan,
	u32        cnt,
	f64        gain,
	f64        FAR * voltArray,
	i16        FAR * binArray);

extern i16 WINAPI AI_Read_Scan (
	i16        slot,
	i16        FAR * reading);

extern i16 WINAPI AI_VRead_Scan (
	i16        slot,
	f64        FAR * reading);

extern i16 WINAPI SCXI_ModuleID_Read (
	i16        scxiID,
	i16        moduleSlot,
	i32        FAR * id);

extern i16 WINAPI AO_VScale (
	i16        slot,
	i16        chan,
	f64        voltage,
	i16        FAR * value);

extern i16 WINAPI GPCTR_Change_Parameter (
	i16        deviceNumber,
	u32        gpCounterNumber,
	u32        paramID,
	u32        paramValue);

extern i16 WINAPI DIG_Trigger_Config (
	i16        slot,
	i16        grp,
	i16        startTrig,
	i16        startPol,
	i16        stopTrig,
	i16        stopPol,
	u32        ptsAfterStopTrig,
	u32        pattern,
	u32        patternMask);

extern i16 WINAPI SCXI_Set_Threshold (
	i16        chassisID,
	i16        moduleSlot,
	i16        channel,
	f64        threshHold,
	f64        hysteresis);

extern i16 WINAPI WFM_Set_Clock (
	i16        slot,
	i16        group,
	u32        whichClock,
	f64        desiredRate,
	u32        units,
	f64        FAR * actualRate);

extern i16 WINAPI DAQ_Set_Clock (
	i16        slot,
	u32        whichClock,
	f64        desiredRate,
	u32        units,
	f64        FAR * actualRate);

extern i16 WINAPI Tio_Select_Signal (
	i16        deviceNumber,
	u32        signal,
	u32        source,
	u32        sourceSpec);

extern i16 WINAPI Tio_Combine_Signals (
	i16        deviceNumber,
	u32        internalLine,
	u32        logicalExpression);

extern i16 WINAPI DIG_In_Prt (
	i16        slot,
	i16        port,
	i32        FAR * pattern);

extern i16 WINAPI DIG_Out_Prt (
	i16        slot,
	i16        port,
	i32        pattern);

extern i16 WINAPI AI_Get_Overloaded_Channels (
	i16        deviceNumber,
	i16        FAR * numChannels,
	i16        FAR * channelList);

extern i16 WINAPI Calibrate_TIO (
	i16        deviceNumber,
	u32        operation,
	u32        setOfCalConst,
	f64        referenceFreq);

extern i16 WINAPI DIG_Change_Message_Config (
	i16        deviceNumber,
	i16        operation,
	i8         FAR * riseChanStr,
	i8         FAR * fallChanStr,
	HWND       handle,
	i16        msg,
	u32        callBackAddr);

extern i16 WINAPI DIG_Change_Message_Control (
	i16        deviceNumber,
	i16        ctrlCode);

extern i16 WINAPI DIG_Filter_Config (
	i16        deviceNumber,
	i16        mode,
	i8         FAR * chanStr,
	f64        interval);

extern i16 WINAPI SCXI_TerminalBlockID_Read (
	i16        scxiID,
	i16        moduleSlot,
	i32        FAR * id);

extern i16 WINAPI ni62xx_CalStart (
	i16        device,
	i8         FAR * password);

extern i16 WINAPI ni62xx_CalAdjust (
	i16        device,
	u32        calMode,
	f64        FAR * measuredData,
	i16        numOfValues);

extern i16 WINAPI ni62xx_CalEnd (
	i16        device,
	u32        calAction);

extern i16 WINAPI ni62xx_SelfCalibrate (
	i16        device);

extern i16 WINAPI CalFetchInternalReference (
	i16        device,
	f64        FAR * referenceValue);

extern i16 WINAPI CalChangePassword (
	i16        device,
	i8         FAR * oldPassword,
	i8         FAR * newPassword);

extern i16 WINAPI CalFetchCount (
	i16        device,
	u32        calType,
	i32        FAR * calCount);

extern i16 WINAPI CalFetchDate (
	i16        device,
	u32        calType,
	i32        FAR * year,
	i32        FAR * month,
	i32        FAR * day);

extern i16 WINAPI CalFetchTemperature (
	i16        device,
	u32        calType,
	f64        FAR * temperature);

extern i16 WINAPI CalFetchMiscInfo (
	i16        device,
	i8         FAR * miscInfo);

extern i16 WINAPI CalStoreMiscInfo (
	i16        device,
	i8         FAR * miscInfo);
extern i16 WINAPI USE_MIO (
	void);
extern i16 WINAPI USE_LPM (
	void);
extern i16 WINAPI USE_LAB (
	void);
extern i16 WINAPI USE_DIO_96 (
	void);
extern i16 WINAPI USE_DIO_32F (
	void);
extern i16 WINAPI USE_DIO_24 (
	void);
extern i16 WINAPI USE_AO_610 (
	void);
extern i16 WINAPI USE_AO_2DC (
	void);